--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
   command = "npm install"
   functions = "netlify-functions"
-  publish = "public"
+  publish = "build"  # Or remove this line if you don't have static assets to publish
