--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "dependencies": {
     "@netlify/functions": "^2.8.2",
     "express": "^4.21.2",
-    "nodemon": "^3.1.9"
+    "netlify-cli": "^17.38.1",
+    "nodemon": "^3.1.9",
+    "serverless-http": "^3.2.0"
   },
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build": "netlify deploy --prod",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
