--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,12 @@
 [build]
-  functions = "netlify-functions"
+  functions = "netlify/functions"
+
+[functions]
+  external_node_modules = ["express"]
+  node_bundler = "esbuild"
+
+[[redirects]]
+  from = "/*"
+  to = "/.netlify/functions/api/:splat"
+  status = 200
+  force = true
