--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "netlify-cli": "^17.38.1",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.9",
     "serverless-http": "^3.2.0"
   },
