--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "dependencies": {
     "@netlify/functions": "^2.8.2",
     "@types/express": "^5.0.0",
+    "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "fb-messenger": "^2.3.1",
     "netlify-cli": "^17.38.1",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.9",
